--- a/kawage/static/theme/css/styles.css
+++ b/kawage/static/theme/css/styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@include transition($transition-collapse);
 /*!
 * Start Bootstrap - Freelancer v7.0.6 (https://startbootstrap.com/theme/freelancer)
 * Copyright 2013-2022 Start Bootstrap
@@ -10,6 +11,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ 
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -401,6 +403,7 @@ fieldset {
   margin: 0;
   border: 0;
 }
+
 
 legend {
   float: left;
@@ -2009,6 +2012,12 @@ progress {
 .table-borderless > :not(:first-child) {
   border-top-width: 0;
 }
+
+/* .collapse {
+  &:not(.show) {
+    display: none;
+  }
+} */
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
   --bs-table-accent-bg: var(--bs-table-striped-bg);
@@ -3943,7 +3952,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #1abc9c;
+  /* color: #1abc9c; */
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4050,7 +4059,7 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
+  padding-top: 0.35rem;
   padding-bottom: 0.1rem;
   margin-right: 1rem;
   font-size: 1.25rem;
@@ -4793,6 +4802,30 @@ textarea.form-control-lg {
 }
 .breadcrumb-item.active {
   color: #6c757d;
+}
+.accordion {
+  /* background-color: #eee; */
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+  /* background-color: #ccc; */
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  /* background-color: white; */
+  overflow: hidden;
 }
 
 .pagination {
@@ -11375,21 +11408,21 @@ html {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #1abc9c;
-}
+  color: #1abc9c; 
+} 
 #mainNav .navbar-toggler {
   font-size: 80%;
-  padding: 0.8rem;
+  padding: 0.02rem;
 }
 
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 1.5rem;
-    padding-bottom: 1.1rem;
+    padding-bottom: 0.1rem;
     transition: padding-top 0.3s, padding-bottom 0.3s;
   }
   #mainNav .navbar-brand {
-    font-size: 2.25em;
+    font-size: 2.9em;
     transition: font-size 0.3s;
   }
   #mainNav .navbar-nav {
@@ -11397,11 +11430,13 @@ html {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+  } 
+  #mainNav .navbar-nav li.nav-item a.nav-link.active {
+    color: #fff; 
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #1abc9c;
+    /* background: #1abc9c;  */
   }
 
   #mainNav.navbar-shrink {
@@ -11414,7 +11449,7 @@ html {
 }
 .form-floating input.form-control,
 .form-floating textarea.form-control {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   border-left: 0;
   border-right: 0;
   border-top: 0;
@@ -11426,7 +11461,7 @@ html {
   box-shadow: none;
 }
 .form-floating label {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   color: #6c757d;
 }
 
