--- a/kawage/templates/about.html
+++ b/kawage/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-<!-- <html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
@@ -48,10 +48,8 @@ window.onload = function() {
 </head>   
 <body>
 
-<h1>Cascading Dropdown Example</h1>
-
 <form name="form1" id="form1" action="/action_page.php">
-Subjects: <select name="subject" id="subject">
+Subjects: &nbsp;&nbsp;&nbsp;&nbsp;<select name="subject" id="subject">
     <option value="" selected="selected">Select subject</option>
   </select>
   <br><br>
@@ -68,8 +66,13 @@ Chapters: <select name="chapter" id="chapter">
 
 </body>
 </html>
-<!DOCTYPE html>
+
+
+
+<!-- <body> --> 
+<!-- <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -77,107 +80,62 @@ Chapters: <select name="chapter" id="chapter">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body> -->
-<div class="container mt-3">
-  <h2>Configure AWS components</h2>
-  <p>Fill out each step with your selections and then press submit to iniaite a build out.</p>
-  <div id="accordion">
-    <div class="card">
-      <div class="card-header">
-        <a class="btn collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-          data-bs-toggle="collapse" href="#collapseOne">
-          <p style='font-size:22px'><strong> STEP 1</strong> - Set up BGP Configuration </p>
-        </a>
-      </div>
-      <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-        <div class="card-body">
 
-          <head>
-            <title>Bootstrap Example</title>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-          </head>
+<body>
 
-          <body>
-
-            <div class="container mt-3">
-              <form action="/action_page.php">
-                <label for="sel1" class="form-label">Select BGP timers required for peering:</label>
-                <select class="form-select" id="sel1" name="sellist1">
-                  <option>3 & 9</option>
-                  <option>5 & 15</option>
-                </select>
-                <br>
-
-          </body>
-
-          <div class="container mt-3">
-            <form action="/action_page.php">
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="check1" name="option1" value="something" checked>
-                <label class="form-check-label" for="check1">BFD</label>
-              </div>
-              <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="check2" name="option2" value="something">
-                <label class="form-check-label" for="check2">MD5</label>
-              </div>
-              <div class="container mt-3">
-                <div class="input-group-text">
-                  <input type="checkbox">
-                </div>
-                <input type="text" class="form-control" placeholder="/31 Transit Network">
-              </div>
-              <button type="submit" class="btn btn-primary mt-3">Submit</button>
-            </form>
-          </div>
-
-          </html>
+  <div class="container mt-3">
+    <h2>Accordion Example</h2>
+    <p><strong>Note:</strong> The <strong>data-bs-parent</strong> attribute makes sure that all collapsible elements
+      under the specified parent will be closed when one of the collapsible item is shown.</p>
+    <div id="accordion">
+      <div class="card">
+        <div class="card-header">
+          <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+            Collapsible Group Item #1
+          </a>
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header">
-        <a class="btn collapsed" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo"
-          href="#collapseTwo">
-          <p style='font-size:22px'><strong> STEP 2 </strong> - Select VLANs </p>
-        </a>
-      </div>
-      <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-        <div class="container mt-3">
-          <label for="browser" class="form-label">Choose your VLAN from the list:</label>
-          <input class="form-control" list="browsers" name="browser" id="browser">
-          <datalist id="browsers">
-            <option value="VLAN 10">
-            <option value="VLAN 20">
-            <option value="VLAN 30">
-            <option value="VLAN 40">
-            <option value="VLAN 50">
-          </datalist>
+        <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
           <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
           </div>
         </div>
       </div>
       <div class="card">
         <div class="card-header">
-          <a class="btn collapsed" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapseThree"
-            href="#collapseThree">
-            <p style='font-size:22px'><strong> STEP 3 </strong>- Configure access-lists </p>
+          <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+            Collapsible Group Item #2
+          </a>
+        </div>
+        <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+          <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+            Collapsible Group Item #3
           </a>
         </div>
         <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
           <div class="card-body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequa
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
           </div>
         </div>
       </div>
     </div>
   </div>
-  </body>
-  </html>
-  {% endblock %}
+
+</body>
+
+</html>
+
+
+{% endblock %} -->
