--- a/kawage/templates/accounts/profile.html
+++ b/kawage/templates/accounts/profile.html
@@ -4,32 +4,36 @@
 
 {% block content %}
 <h1>
-    {{ user.get_full_name }} (@{{user.username}})
+    <div class="container mt-3">
+        {{ user.get_full_name }} (@{{user.username}})
 </h1>
 
 {% with profile=user.profile %}
-    {% if profile %}
-        <h2>
-            {{ profile.persona|default:"" }}
-        </h2>
-        <div>
-            {{ profile.bio|default:"" }}
-        </div>
-        <div>
-            {% with website=profile.website|default:"" %}
-                <a href="{{website}}">{{ website }}</a>
-            {% endwith %}
-        </div>
-        <br/>
-        <div>
-            Interests:
-            {% for interest in profile.interest.all %}
-                <span>
-                    {{ interest.name }}{% if not forloop.last %}, {% endif %}
-                </span>
-            {% endfor %}
-        </div>
-    {% endif %}
+{% if profile %}
+<h2>
+    <div class="container mt-3">
+        {{ profile.persona|default:"" }}
+    </div>
+</h2>
+<div class="container mt-3">
+    {{ profile.bio|default:"" }}
+</div>
+<div class="container mt-3">
+    {% with website=profile.website|default:"" %}
+    <a href="{{website}}">{{ website }}</a>
+    {% endwith %}
+</div>
+<br />
+<div class="container mt-3">
+    Interests:
+    {% for interest in profile.interest.all %}
+    <span>
+        {{ interest.name }}{% if not forloop.last %}, {% endif %}
+    </span>
+    {% endfor %}
+</div>
+</div>
+{% endif %}
 {% endwith %}
 
 {% endblock %}
