--- a/kawage/templates/index.html
+++ b/kawage/templates/index.html
@@ -6,23 +6,25 @@
 {% block content %}
 <!-- Masthead-->
 <header class="masthead text-white">
-    <h1 class="masthead-heading8 font-weight-bold rounded text-lowercase"><i>"The No.1 platform for scalable<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-CLoud
-            Automation"</i></h1>
-    <div class="container d-flex align-items-center flex-column">
-        <!-- Masthead Avatar Image-->
-        <img class="masthead-avatar mb-5" src="static/theme/assets/img/portfolio/bob3.png" alt="..." />
-        <!-- Masthead Heading-->
-    </div>
+  <h1 class="masthead-heading8 font-weight-bold rounded text-lowercase"><i>"The No.1 platform for scalable<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Multi-CLoud
+      Automation"</i></h1>
+  <div class="container d-flex align-items-center flex-column">
+    <!-- Masthead Avatar Image-->
+    <img class="masthead-avatar mb-5" src="static/theme/assets/img/portfolio/bob3.png" alt="..." />
+    <!-- Masthead Heading-->
+  </div>
 </header>
 <div class="container mt-3">
-    <h2>Info request:</h2>
-    <p>Please provide email address for more details on our services:</p>
-    <form>
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Enter email" name="email">
+  <span style="font-size:26px;"><strong> Demo request </strong></span>
+  <br>
+  <p style="font-size: 16px;">Please provide an email address to receive details on our services including a
+    capability demo:</p>
+  <form>
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Enter email" name="email">
       </div>
-    </form>
-  </div>
-    {% endblock %}
+  </form>
+</div>
+{% endblock %}
