--- a/kawage/templates/about.html
+++ b/kawage/templates/about.html
@@ -6,6 +6,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<header class="py-10 mb-4 bg-gradient-primary-to-secondary">
+   <div class="container-xl px-4">
+      <div class="text-center">
+         <br><br>
+         <h1 class="text-white">Welcome to true Multi-Cloud Automation</h1>
+         <p class="lead mb-0 text-white-50">A single place to transparently automate multicloud deployments</p>
+      </div>
+   </div>
+</header>
+
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=2">
    <script>
@@ -48,26 +58,24 @@
       }
    </script>
 </head>
-<br>
-<br>
 <div class="container mt-3">
 
    <body>
       <form name="form1" id="form1" action="/action_page.php">
          <p style="font-size:24px;">
-               Choose which cloud: </span> &nbsp;&nbsp;&nbsp;&nbsp; </p><select class="form-select" name="subject"
+            Choose a cloud: </span> &nbsp;&nbsp;&nbsp;&nbsp; </p><select class="form-select" name="subject"
             id="subject">
             <option value="" selected="selected">Select cloud</option>
          </select>
          <br><br>
          <p style="font-size:24px;">
-            Chose the component: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Chose a component: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          </p><select class="form-select" name="topic" id="topic">
             <option value="" selected="selected">Please select subject first</option>
          </select>
          <br><br>
          <p style="font-size:24px;">
-            Select element: &nbsp;&nbsp;</p><select class="form-select" name="chapter" id="chapter">
+            Select the element: &nbsp;&nbsp;</p><select class="form-select" name="chapter" id="chapter">
             <option value="" selected="selected">Please select topic first</option>
          </select>
          <br><br>
