--- a/kawage/templates/contact.html
+++ b/kawage/templates/contact.html
@@ -6,6 +6,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<header class="py-10 mb-4 bg-gradient-primary-to-secondary">
+  <div class="container-xl px-4">
+    <div class="text-center">
+      <br><br>
+      <h1 class="text-white">Configure Your AWS Virtual Network Environment</h1>
+      <p class="lead mb-0 text-white-50">Fill out each step with your selections and then press submit to iniaite a
+        build out</p>
+    </div>
+  </div>
+</header>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=2">
   <script>
@@ -48,10 +59,6 @@
     }
   </script>
 </head>
-<div class="container mt-3">
-  <h2>&nbsp;&nbsp;Configure Your AWS Environment</h2>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fill out each step with your selections and then press submit to iniaite a
-    build out. Once complete resulting artifacts will be available in uour account. </p>
   <div class="container mt-3">
     <div class="card">
       <div class="accordion accordion-flush" id="accordionFlushExample">
