--- a/kawage/templates/index.html
+++ b/kawage/templates/index.html
@@ -15,16 +15,18 @@
     <!-- Masthead Heading-->
   </div>
 </header>
-<div class="container mt-3">
-  <span style="font-size:26px;"><strong> Demo request </strong></span>
-  <br>
-  <p style="font-size: 16px;">Please provide an email address to receive details on our services including a
-    capability demo:</p>
-  <form>
-    <div class="row">
-      <div class="col">
-        <input type="text" class="form-control" placeholder="Enter email" name="email">
-      </div>
-  </form>
+<div class="container-xl px-4">
+  <div class="text-center">
+    <br><br>
+    <p style="font-size:18px;"><strong>- Request a demo / further details -</strong></p>
+    <form>
+      <div class="row">
+        <div class="col">
+          <input type="text" class="form-control" style="text-align:center; width:75%; margin:auto;"
+            placeholder="Enter your email address to receive full details of our services, including a demonstration of dynamic multi-cloud buildout"
+            name="email">
+        </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
