--- a/kawage/templates/about.html
+++ b/kawage/templates/about.html
@@ -14,7 +14,7 @@
       <div class="text-center">
          <br><br>
          <h1 class="text-white">Welcome to transparent Multi-Cloud Automation</h1>
-         <p class="lead mb-0 text-white-50">A single place to transparently automate multicloud deployments</p>
+         <p class="lead mb-0 text-white-50">A single place to transparently automate multi-cloud deployments</p>
       </div>
    </div>
 </header>
