--- a/kawage/templates/index.html
+++ b/kawage/templates/index.html
@@ -16,15 +16,14 @@
   </div>
 </header>
 <div class="container-xl px-4">
-  <div class="text-center">
+  <div class="text-left">
     <br><br>
-    <p style="font-size:18px;"><strong>- Request a demo / further details -</strong></p>
+    <p style="font-size:17px;"><strong> Request further details: </strong></p>
     <form>
       <div class="row">
         <div class="col">
-          <input type="text" class="form-control" style="text-align:center; width:75%; margin:auto;"
-            placeholder="Enter your email address to receive full details of our services, including a demonstration of dynamic multi-cloud buildout"
-            name="email">
+          <input type="text" class="form-control" style="width:36%;"
+            placeholder="Enter your email address to receive full details of our services" name="email">
         </div>
     </form>
   </div>
