--- a/kawage/templates/contact.html
+++ b/kawage/templates/contact.html
@@ -59,124 +59,123 @@
     }
   </script>
 </head>
-  <div class="container mt-3">
-    <div class="card">
-      <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              <span style="font-size:24px;"><strong> STEP 1 - &nbsp; </strong> </span> <span
-                style="font-size: 20px;">Set
-                up BGP
-                Configuration </span>
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <form action="/action_page.php">
-                <label for="sel1" class="form-label">Select BGP timers required for peering:</label>
-                <select class="form-select" id="sel1" name="sellist1">
-                  <option>3 & 9</option>
-                  <option>5 & 15</option>
-                </select>
-              </form>
-              <br>
-              <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" onclick="myFunction()" id="mySwitch" name="darkmode"
-                  value="no">
-                <label class="form-check-label" for="mySwitch">MD5 Password?</label>
+<div class="container mt-3">
+  <div class="card">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            <span style="font-size:24px;"><strong> STEP 1 - &nbsp; </strong> </span> <span style="font-size: 20px;">Set
+              up BGP
+              Configuration </span>
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <form action="/action_page.php">
+              <label for="sel1" class="form-label">Select BGP timers required for peering:</label>
+              <select class="form-select" id="sel1" name="sellist1">
+                <option>3 & 9</option>
+                <option>5 & 15</option>
+              </select>
+            </form>
+            <br>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" onclick="myFunction()" id="mySwitch" name="darkmode"
+                value="no">
+              <label class="form-check-label" for="mySwitch">MD5 Password?</label>
+            </div>
+            <br>
+            <form action="/action_page.php">
+              <div class="form-floating mb-3 mt-3" id="myDIV" style="display:none">
+                <textarea class="form-control" id="comment" name="text" placeholder="Comment goes here"></textarea>
+                <label for="comment">Enter Password</label>
               </div>
-              <br>
-              <form action="/action_page.php">
-                <div class="form-floating mb-3 mt-3" id="myDIV" style="display:none">
-                  <textarea class="form-control" id="comment" name="text" placeholder="Comment goes here"></textarea>
-                  <label for="comment">Enter Password</label>
-                </div>
-              </form>
-              <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes">
-                <label class="form-check-label" for="mySwitch">BFD?</label>
-              </div>
-              <br>
+            </form>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes">
+              <label class="form-check-label" for="mySwitch">BFD?</label>
             </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              <span style="font-size:24px;"><strong> STEP 2 - &nbsp; </strong> </span> <span
-                style="font-size: 20px;">Select
-                VLANs</span>
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <label for="browser" class="form-label">Choose your VLAN from the list:</label>
-              <input class="form-control" list="browsers" name="browser" id="browser">
-              <datalist id="browsers">
-                <option value="VLAN 10 Management">
-                <option value="VLAN 20 Order Execution">
-                <option value="VLAN 30 Market data A">
-                <option value="VLAN 40 Market Data B">
-                <option value="VLAN 50 PTP">
-              </datalist>
-              <br>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              <span style="font-size:24px;"><strong> STEP 3 - &nbsp; </strong> </span> <span style="font-size: 20px;">
-                Configure
-                ACLs</span>
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-
-              <body>
-                <form name="form1" id="form1" action="/action_page.php">
-                  Subjects: &nbsp;&nbsp;&nbsp;&nbsp;<select class="form-select" name="subject" id="subject">
-                    <option value="" selected="selected">Select subject</option>
-                  </select>
-                  <br><br>
-                  Topics: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select class="form-select" name="topic"
-                    id="topic">
-                    <option value="" selected="selected">Please select subject first</option>
-                  </select>
-                  <br><br>
-                  Chapters: &nbsp;&nbsp;<select class="form-select" name="chapter" id="chapter">
-                    <option value="" selected="selected">Please select topic first</option>
-                  </select>
-                  <br><br>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-
-              </body>
-            </div>
+            <br>
           </div>
         </div>
       </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            <span style="font-size:24px;"><strong> STEP 2 - &nbsp; </strong> </span> <span
+              style="font-size: 20px;">Select
+              VLANs</span>
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <label for="browser" class="form-label">Choose your VLAN from the list:</label>
+            <input class="form-control" list="browsers" name="browser" id="browser">
+            <datalist id="browsers">
+              <option value="VLAN 10 Management">
+              <option value="VLAN 20 Order Execution">
+              <option value="VLAN 30 Market data A">
+              <option value="VLAN 40 Market Data B">
+              <option value="VLAN 50 PTP">
+            </datalist>
+            <br>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <span style="font-size:24px;"><strong> STEP 3 - &nbsp; </strong> </span> <span style="font-size: 20px;">
+              Configure
+              ACLs</span>
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+
+            <body>
+              <form name="form1" id="form1" action="/action_page.php">
+                Subjects: &nbsp;&nbsp;&nbsp;&nbsp;<select class="form-select" name="subject" id="subject">
+                  <option value="" selected="selected">Select subject</option>
+                </select>
+                <br><br>
+                Topics: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select class="form-select" name="topic"
+                  id="topic">
+                  <option value="" selected="selected">Please select subject first</option>
+                </select>
+                <br><br>
+                Chapters: &nbsp;&nbsp;<select class="form-select" name="chapter" id="chapter">
+                  <option value="" selected="selected">Please select topic first</option>
+                </select>
+                <br><br>
+
+              </form>
+            </body>
+          </div>
+        </div>
+      </div>
+      <br>
+      <button type="submit" class="btn btn-primary" style="position: absolute; left: 3%;">Submit</button>
     </div>
   </div>
-  <script>
-    function myFunction() {
-      var x = document.getElementById("myDIV");
-      if (x.style.display === "none") {
-        x.style.display = "block";
-      } else {
-        x.style.display = "none";
-      }
+</div>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myDIV");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
     }
-  </script>
+  }
+</script>
 
 </html>
 {% endblock %}
